# fibermorph

./: .gitignore  .pymon  CHANGELOG.md  CONDA_FORGE_SETUP.md  README.md  REFACTORING_SUMMARY.md  STREAMLIT_DEPLOYMENT.md  cibuildwheel.toml  packages.txt  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test_installation.sh  test_py313.sh
.github/workflows/: publish.yml  release-please.yaml  release.yaml  test.yaml
.streamlit/: config.toml
conda-recipe/: meta.yaml
docs/: dependency-audit.md
fibermorph/: __init__.py  __main__.py  arc_sim.py  cli.py  demo.py  dummy_data.py  fibermorph.py  fibermorph_compat.py  workflows.py
fibermorph/analysis/: curvature_pipeline.py  parallel.py  section_pipeline.py
fibermorph/core/: curvature.py  filters.py  section.py
fibermorph/demo/: __init__.py  demo.py  dummy_data.py
fibermorph/gui/: __init__.py  app.py  launcher.py
fibermorph/io/: converters.py  readers.py  writers.py
fibermorph/processing/: binary.py  geometry.py  morphology.py
fibermorph/test/: test_core_curvature.py  test_core_filters.py  test_core_section.py  test_fibermorph.py  test_io_readers.py  test_io_writers.py  test_processing_binary.py  test_processing_geometry.py  test_processing_morphology.py  test_utils_filesystem.py  test_utils_timing.py
fibermorph/utils/: filesystem.py  logging_config.py  timing.py
tools/: inventory_imports.py
