[build-system]
# Pin poetry-core to a version that emits Core Metadata <= 2.3 to satisfy older
# publishers/validators (e.g., pypa/gh-action-pypi-publish@v1.8.x).
# Newer poetry-core versions (>=1.9) generate Metadata-Version: 2.4 which some
# validators may not recognize yet.
requires = ["poetry-core<1.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fibermorph"
version = "0.3.13"
description = "Toolkit for analyzing hair fiber morphology"
authors = ["tinalasisi <tina.lasisi@gmail.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/lasisilab/fibermorph"
repository = "https://github.com/lasisilab/fibermorph"

[tool.poetry.dependencies]
python = "^3.10"
numpy = [
    {version = "^1.26.4", python = ">=3.10,<3.13"},
    {version = "^2.0", python = "^3.13"}
]
joblib = "^1.3.2"
pandas = "^2.2.0"
pillow = "^10.2.0"
requests = "^2.31.0"
scipy = "^1.8"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"
rawpy = [
    {version = "^0.19.0", python = "<3.13", optional = true},
    {version = "^0.24.0", python = ">=3.13", optional = true}
]
matplotlib = {version = "^3.8.2", optional = true}
streamlit = {version = "^1.28.0", optional = true}

[tool.poetry.scripts]
fibermorph = "fibermorph.cli:main"
fibermorph-gui = "fibermorph.gui.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"

[tool.cibuildwheel]
build-frontend = "build"

[tool.poetry.extras]
raw = ["rawpy"]
viz = ["matplotlib"]
gui = ["streamlit"]
